[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "pyaml/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["pyaml"]

[project]
name = "accelerator-middle-layer"
description = "Python Accelerator Middle Layer"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
#license = {file = "LICENSE"}
keywords = ["Accelerator", "Synchrotron", "Operation", "Tuning", "Digital Twin", "Commissioning", ]
maintainers = [
    {name = "Simone Maria Liuzzo", email = "simone.liuzzo@esrf.fr"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.3",
    "accelerator-toolbox>=0.6.1",
    "PyYAML>=6.0.2",
    "pydantic>=2.11.7"
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-cov>=3.0",
]
doc = [
    "sphinx",
    "travis-sphinx",
    "sphinx-rtd-theme"
]

[project.urls]
Homepage = "https://github.com/python-accelerator-middle-layer/pyaml"
Documentation = "https://python-accelerator-middle-layer.github.io/pyaml/"
Repository = "https://github.com/python-accelerator-middle-layer/pyaml.git"