[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "tango/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["tango-pyaml"]

[project]
name = "tango-pyaml"
description = "PyAML Tango CS mocking"
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    "pydantic>=2.0"
]
